--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 ### Base & Server                                   ###
 #######################################################
 
-Django==1.11.11
+Django==1.11.15
 django-appconf==1.0.2
 django-extensions==1.8.1
 django-filter==1.1.0
@@ -107,9 +107,10 @@ tblib==1.3.2
 #######################################################
 
 django-two-factor-auth==1.6.2
-django-otp==0.4.1
-django-otp-yubikey==0.4.1
-YubiOTP==0.2.1
+django-otp==0.5.0
+django-otp-yubikey==0.5.0
+YubiOTP==0.2.2
+pycryptodome==3.6.5
 qrcode==4.0.4
 twilio==6.6.2
 django-phonenumber-field==1.3.0
@@ -134,7 +135,7 @@ social-auth-core==1.7.0
 requests-oauthlib==0.8.0
 oauthlib==2.0.7
 pyjwt==1.6.1
-cryptography==2.2.2
+cryptography==2.3.1
 asn1crypto==0.24.0
 cffi==1.11.5
 pycparser==2.18
@@ -146,16 +147,15 @@ pycparser==2.18
 anyjson==0.3.3
 simplejson==3.11.1
 chardet==3.0.4  # Old version in case of issues is: 2.3.0
-pycrypto==2.6.1  # Old version is: 2.6
 requests==2.18.4
 requests-futures==0.9.7
 requests-cache==0.4.13
 unicodecsv==0.13.0
 urllib3==1.22
-freemail==1.2.18
+freemail==1.2.19
 tldextract==1.7.5
 idna==2.6
-raven==6.3.0
+raven==6.9.0
 contextlib2==0.5.4
 phonenumberslite==8.8.1
 slacker==0.9.42
@@ -164,3 +164,5 @@ tablib==0.12.1
 netaddr==0.7.19
 drf-yasg==1.7.1
 avinit==1.2.1
+analytics-python==1.2.9
+pycountry==18.5.26
