--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ asgi_ipc==1.4.0
 django-redis-cache==1.7.1
 django-templated-email==2.2
 hiredis==0.2.0
-Markdown==2.6.9 # markdown for inline docstrings on API
+Markdown==2.6.9
 MarkupSafe==1.0
 redis==2.10.6
 jinja2==2.9.6
